выполнил рефакторинг